compiler/tests-spec/testData/psi/linked/constant-literals/boolean-literals/p-1/pos/2.23.kt
/*
 * KOTLIN PSI SPEC TEST (POSITIVE)
 *
 * SPEC VERSION: 0.1-draft
 * PLACE: constant-literals, boolean-literals -> paragraph 1 -> sentence 2
 * NUMBER: 23
 * DESCRIPTION: The use of Boolean literals as the identifier (with backtick) in the atomicExpression.
 * NOTE: this test data is generated by FeatureInteractionTestDataGenerator. DO NOT MODIFY CODE MANUALLY!
 */

val `true` = 10
val `false` = "."

val value_1 = `true` - 100 % `false`
val value_2 = `true`.dec()
val value_3 = "$`false` 10"
val value_4 = "${`true`}"
val value_5 = `false` + " 11..." + `true` + "1"
val value_6 = `false`
